--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>  
 
     <div class="banner">
-      <img src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/plantas.webp?v=1718633375692">
+      <img id="img" src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/plantas.webp?v=1718633375692">
     </div>
     
   </body>
