🌜👡 Checkpoint ./style.css:66357187/8 ./index.html:66357187/339 ./.glitch-assets:66357187/371

--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
       <br>
       <h3>Gostos</h3>
       <br>
-      <p>gosto bastante de jogar <b>e</b> gosto de programação (embora eu não saiba muito)</p>
+      <p>gosto bastante de jogar<b>,</b> de ciencias <b>e</b> gosto de programação (embora eu não saiba muito)</p>
+      <br>
+    </div>
+    
+    <div id="contatos">
+      <h1>Contatos:</h1>
+      <img src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/whatssap.jfif?v=1719784703627">
     </div>
     
   </body>
