--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     
     <div>
         <img id="onda" src= "https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/wave.svg?v=1719267181442">
-      </div>
+        <img id="onda2" src= "https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/wave.svg?v=1719267181442">
+    </div>
     
     <div id= "proj">
       <h1>meus projetos</h1>
