🕌👄 Checkpoint ./.glitch-assets:66357187/415 ./index.html:66357187/277

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     
     <div>
-        <img id="onda" src= "https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/wave.svg?v=1719267181442">
+        <img id="onda" src= "">
 
     </div>
     
