❣️🤗 Checkpoint ./index.html:66357187/1730 ./.glitch-assets:66357187/1159 ./style.css:66357187/336

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
     </div>
     
     <div>
-        <img id="onda" src= "https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d">
-
+        <img id="onda" src= "https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/wave%20(4).svg?v=1720406882221">
+        <img id="onda2" src= "https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/wave%20(5).svg?v=1720407499617">
     </div>
-    https://cdn.glitch.glo
     <div id= "proj">
       <h1>meus projetos</h1>
       
