--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
   </head>
-  <body  style="background-color:#c8b3a6">
+  <body  style="background-color:#39bbd4">
   
   <div class="topnav">
     <a href="#">Menu</a>
@@ -44,8 +44,8 @@
   <div class="card">
     <img src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/html.webp?v=1719782410526" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">Html</h5>
+      <p class="card-text">HTML (Linguagem de Marcação de Hipertexto) é o código que você usa para estruturar uma página web e seu conteúdo.</p>
       <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
     </div>
   </div>
