🗾👩‍❤️‍💋‍👩 Checkpoint ./.glitch-assets:66357187/835 ./index.html:66357187/282

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <div class="card-group">
   <div class="card">
-    <img src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/html.webp?v=1719782410526" class="card-img-top" alt="...">
+    <img src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/HTML-5-Badge-Logo.png?v=1720447490200" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Html</h5>
       <p class="card-text">HTML (Linguagem de Marcação de Hipertexto) é o código que você usa para estruturar uma página web e seu conteúdo.</p>
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="https://cdn.glitch.global/8c33d496-4cdf-4e25-9a0b-121ba9d24fbe/CSS-Logo.png?v=1720447274780" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
